--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,7 +6,7 @@
 FROM ruby:%%FROM%%
 MAINTAINER Tomas Jukin <tomas.jukin@juicymo.cz>
 
-ENV BUILD_PACKAGES curl-dev build-base bash cmake clang clang-dev make gcc g++ libc-dev linux-headers libxml2 libxml2-dev libxslt-dev
+ENV BUILD_PACKAGES libcurl curl curl-dev build-base bash cmake clang clang-dev make gcc g++ libc-dev linux-headers libxml2 libxml2-dev libxslt-dev
 ENV RUBY_PACKAGES cairo-dev postgresql-dev tzdata wget postgresql=%%POSTGRES%%
 ENV WKHTMLTOPDF_PACKAGES gtk+ glib ttf-freefont fontconfig dbus
 
