Add Python2 package for node-sass

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -19,6 +19,7 @@ RUN apk add --no-cache \
     less \
     nodejs \
     nodejs-npm \
+    python2 \
     openssh
 
 RUN wget --no-check-certificate https://github.com/kernix/wkhtmltopdf-docker-alpine/raw/master/wkhtmltopdf -P /usr/bin/
